Bug 88859 - XHR_RESPONSE_BLOB is not enabled on some platforms
Summary: XHR_RESPONSE_BLOB is not enabled on some platforms
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kinuko Yasuda
URL:
Keywords:
Depends on: 89343
Blocks:
  Show dependency treegraph
 
Reported: 2012-06-12 04:40 PDT by Mario Sanchez Prada
Modified: 2012-06-18 03:56 PDT (History)
11 users (show)

See Also:


Attachments
Patch (19.43 KB, patch)
2012-06-15 06:24 PDT, Kinuko Yasuda
abarth: review+
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mario Sanchez Prada 2012-06-12 04:40:48 PDT
This is making http/tests/xmlhttprequest/response-blob-size.html, introduced in r120042, fail in the following platforms: EFL, GTK, Mac, Qt, Win and WinCairo

Skipping the tests for now.
Comment 1 Kinuko Yasuda 2012-06-12 07:59:02 PDT
Actually the current implementation is not platform dependent and probably we could just enable it on all platforms.
Comment 2 Kinuko Yasuda 2012-06-15 06:24:49 PDT
Created attachment 147798 [details]
Patch
Comment 3 Adam Barth 2012-06-15 11:05:41 PDT
Comment on attachment 147798 [details]
Patch

Ok.  I presume the spec for this feature is stable.  It looks like it's been in the XMLHttpRequest spec for a while.
Comment 4 WebKit Review Bot 2012-06-17 21:49:57 PDT
Comment on attachment 147798 [details]
Patch

Rejecting attachment 147798 [details] from commit-queue.

Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2

Last 500 characters of output:
sts/platform/gtk/TestExpectations
patching file LayoutTests/platform/mac/Skipped
Hunk #1 FAILED at 891.
1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/mac/Skipped.rej
patching file LayoutTests/platform/qt/Skipped
patching file LayoutTests/platform/win/Skipped
patching file LayoutTests/platform/wincairo/Skipped

Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Adam Barth']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue/

Full output: http://queues.webkit.org/results/12969631
Comment 5 Peter Beverloo 2012-06-17 21:52:52 PDT
How are the createAsyncFileSystem() in your patch related to this?
Comment 6 Peter Beverloo 2012-06-17 21:54:13 PDT
Sorry, that should read: "How are the changes in your patch touching createAsyncFileSystem() related to this?"
Comment 7 Kinuko Yasuda 2012-06-18 00:07:17 PDT
Committed r120574: <http://trac.webkit.org/changeset/120574>