XHR_RESPONSE_BLOB is not enabled on some platforms https://bugs.webkit.org/show_bug.cgi?id=88859

Reviewed by Adam Barth.

Source/WebCore:

Removing XHR_RESPONSE_BLOB since the current implementation has
no platform-specific part.

Test: http/tests/xmlhttprequest/blob-response-size.html

* bindings/generic/RuntimeEnabledFeatures.cpp:
(WebCore):
* bindings/generic/RuntimeEnabledFeatures.h:
(RuntimeEnabledFeatures):
* bindings/js/JSXMLHttpRequestCustom.cpp:
(WebCore::JSXMLHttpRequest::visitChildren):
(WebCore::JSXMLHttpRequest::response):
* bindings/v8/custom/V8XMLHttpRequestCustom.cpp:
(WebCore::V8XMLHttpRequest::responseAccessorGetter):
* platform/chromium/PlatformSupport.h:
(PlatformSupport):
* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::responseBlob):
(WebCore::XMLHttpRequest::setResponseType):
(WebCore::XMLHttpRequest::clearResponseBuffers):
(WebCore::XMLHttpRequest::didReceiveData):
* xml/XMLHttpRequest.h:
(XMLHttpRequest):
* xml/XMLHttpRequest.idl:

Source/WebKit/chromium:

Removing XHR_RESPONSE_BLOB since the current implementation has
no platform-specific part.

* src/PlatformSupport.cpp:
* src/WebRuntimeFeatures.cpp:
(WebKit::WebRuntimeFeatures::enableXHRResponseBlob):
(WebKit::WebRuntimeFeatures::isXHRResponseBlobEnabled):

LayoutTests:

Removing xhr.Blob related test from Skipped files.

* platform/efl/Skipped:
* platform/gtk/TestExpectations:
* platform/mac/Skipped:
* platform/qt/Skipped:
* platform/win/Skipped:
* platform/wincairo/Skipped:

Canonical link: https://commits.webkit.org/107186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120574 268f45cc-cd09-0410-ab3c-d52691b4dbfc