Source/WebKit/chromium/src/WebRuntimeFeatures.cpp
@@ -278,18 +278,11 @@ bool WebRuntimeFeatures::isScriptedSpeechEnabled()
 
 void WebRuntimeFeatures::enableXHRResponseBlob(bool enable)
 {
-#if ENABLE(XHR_RESPONSE_BLOB)
-    RuntimeEnabledFeatures::setXHRResponseBlobEnabled(enable);
-#endif
 }
 
 bool WebRuntimeFeatures::isXHRResponseBlobEnabled()
 {
-#if ENABLE(XHR_RESPONSE_BLOB)
-    return RuntimeEnabledFeatures::xhrResponseBlobEnabled();
-#else
-    return false;
-#endif
+    return true;
 }
 
 void WebRuntimeFeatures::enableFileSystem(bool enable)
